--- a/bio.html
+++ b/bio.html
@@ -20,7 +20,8 @@
         <h1>My Bio</h1>
         <p> Victor Chidera Owuala is a DevOps Engineer.</p>
         <p>I love writing bashscripts and having good time playing around codes for exploration, automation is key.</p>
-        <p>In my free time, I enjoy playing guitar and singing .</p>
+        <p>Username: NeB450 </p>
+        <p>Email: victorchidera400@gmail.com .</p>
     </main>
     <footer>
         <p>&copy; 2024 My Biodata Website</p>
